--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@
   justify-content: center;
 }
 
-h1 h2 {
+h1,
+h2 {
   background: #e3f9ff;
   font-family: "Poppins", "sans-serif";
   text-align: center;
